# inkwell

./: .gitignore  LICENSE  README.md  pubspec.yaml  Übersicht
.github/workflows/: build.yml
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  app_router.dart  main.dart
lib/core/export/: export_service.dart  import_service.dart
lib/core/markdown/: frontmatter_parser.dart
lib/core/search/: search_index.dart  search_provider.dart
lib/core/security/: lock_provider.dart  lock_service.dart
lib/core/settings/: settings_provider.dart
lib/core/sharing/: sharing_provider.dart
lib/core/utils/: url_utils.dart
lib/db/: search_database.dart
lib/l10n/: app_de.arb  app_en.arb  app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart
lib/models/: frontmatter.dart  journal_entry.dart  vault_config.dart
lib/theme/: app_theme.dart
lib/widgets/: adaptive_shell.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
stubs/speech_to_text_windows/: pubspec.yaml
stubs/speech_to_text_windows/windows/: CMakeLists.txt  speech_to_text_windows_stub.cpp
stubs/speech_to_text_windows/windows/include/speech_to_text_windows/: speech_to_text_windows_plugin.h
test/: frontmatter_parser_test.dart
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc
(+24 files in other folders)
